# misis_mlops_tolstenko

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
client/: client.py  schemas.py
model_repository/toxicity_classifier/: config.pbtxt
model_repository/toxicity_classifier/1/: model.py
src/: app.py  nlp_utils.py
src/app/: app.py  model.py  schemas.py
tests/: load_test.py  test_api.py  test_pytest.py
