[project]
name = "misis-mlops-tolstenko"
version = "0.1.0"
description = ""
authors = [
    {name = "rototok",email = "alexandro-tolstenko@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest (>=8.4.2,<9.0.0)",
    "fastapi (>=0.119.0,<0.120.0)",
    "numpy (==2.2.6)",
    "locust (>=2.41.6,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
