[project]
name = "lab-1"
version = "0.1.0"
description = ""
authors = [
    {name = "rototok",email = "alexandro-tolstenko@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.10, <3.15"
dependencies = [
    "pre-commit (>=4.3.0,<5.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "fastapi (>=0.120.1,<0.121.0)",
    "transformers (>=4.57.1,<5.0.0)",
    "torch (>=2.9.0,<3.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)"
]
packages = [
    {include = "app", from = "src"}
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]